# internal/api/http/types/task.go
@@ -19,3 +19,8 @@ type GetStatusResponse struct {
 type GetResultResponse struct {
 	Result []byte `json:"result"`
 }
+
+// ErrorResponse - структура для выходных данных в случае ошибки
+type ErrorResponse struct {
+	Error string `json:"error"`
+}
